Unit tests for the first implementation of variant Provided the basic structure for the variant, both empty and non-empty

--- a/mortanodev.helper/mortanodev.helper.vcxproj.filters
+++ b/mortanodev.helper/mortanodev.helper.vcxproj.filters
@@ -15,10 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="ReadMe.txt" />
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="include\meta\Meta.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\structures\Variant.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\error_handling\Assert.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
