--- a/mortanodev.helper/mortanodev.helper.vcxproj
+++ b/mortanodev.helper/mortanodev.helper.vcxproj
@@ -135,10 +135,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <Text Include="ReadMe.txt" />
-  </ItemGroup>
-  <ItemGroup>
+    <ClInclude Include="include\error_handling\Assert.h" />
     <ClInclude Include="include\meta\Meta.h" />
+    <ClInclude Include="include\structures\Variant.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
