Started implementing a typesafe bitmask

--- a/mortanodev.helper/mortanodev.helper.vcxproj
+++ b/mortanodev.helper/mortanodev.helper.vcxproj
@@ -137,6 +137,7 @@
   <ItemGroup>
     <ClInclude Include="include\error_handling\Assert.h" />
     <ClInclude Include="include\meta\Meta.h" />
+    <ClInclude Include="include\structures\Bitmask.h" />
     <ClInclude Include="include\structures\Variant.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
