--- a/mortanodev.helper.test/mortanodev.helper.test.vcxproj.filters
+++ b/mortanodev.helper.test/mortanodev.helper.test.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="BitmaskTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NamedBitmaskTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
